Bug 93971 - CRASH: Writer freezes at the past of small web page content
Summary: CRASH: Writer freezes at the past of small web page content
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.5.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0.1 target:5.3.0 target:5.1.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-09-06 16:13 UTC by Yan Pas
Modified: 2016-10-25 18:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
buggy html page (3.90 KB, text/html)
2015-09-06 18:51 UTC, Yan Pas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yan Pas 2015-09-06 16:13:17 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/45.0.2454.85 Safari/537.36
Build Identifier: LibreOffice 4.4.5.2

Classic pasting of any webpages with tables, vector graphics causes freezing of whole LO and eternal wait.

Reproducible: Always

Steps to Reproduce:
1. Open this page ( I did it in chrome ) https://ru.wikipedia.org/w/index.php?title=%D0%A1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_%D1%83_%D0%BC%D1%8B%D1%81%D0%B0_%D0%A2%D0%B5%D0%BD%D0%B4%D1%80%D0%B0&printable=yes
2. Press Ctrl+A, Ctrl+C
3. Open Writer and press Ctrl+V
Actual Results:  
Soffice frezzes, I was waiting for 2 minutes, then gave up


[Information automatically included from LibreOffice]
Locale: ru
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes


Reset User Profile?No
Comment 1 Jean-Baptiste Faure 2015-09-06 18:12:55 UTC
Confirmed in LO 5.0. It seems that LibreOffice do not like importing using https. It works if the website is accessed in http. For example http://www.zdnet.com took me a few second to be imported in a Writer document.

Well, it works in LO 4.4.6.0+ even for the same https website. So set regression keyword.

More tests: the problem is the frame on the right. If I select only a part the webpage without the frame, pasting in a Writer document take a few seconds.

Best regards. JBF
Comment 2 Yan Pas 2015-09-06 18:34:39 UTC
I did it with 4.4.5 so I do not think it's regression.

Also copying only table/frame on the right is succesful too. (!)The problem is in table of contents ("Содержание" consists of: 1 Предыстория 2 28 августа 3 29 августа 4 Итог 5 См. также 6 Примечания 7 Ссылки) 
Try copying frame and table of contents.
Comment 3 Yan Pas 2015-09-06 18:51:23 UTC
Created attachment 118471 [details]
buggy html page

Grab it, it's problematic part of that page. And yes, there is no troubles with https
Comment 4 MM 2015-09-07 21:17:10 UTC
Well it might also depends on the browser.

To reproduce it:

- https://wiki.documentfoundation.org/ReleaseNotes/5.0
- Grab the text from: 'Contents' all the way to 'About this page'.

When you do a simple copy/paste with firefox, there's no problem.
When you do it with opera dev 33, you get the problem as described, writer freezes. But.... Not when you copy from 'Contents' to 'Android'. So if you stay inside the box it works. Go a little outside, freez....
Comment 5 Yan Pas 2015-09-07 21:24:34 UTC
Test web page which I've attached (X.html), it is very small. No matter where I copy it in ffox or chrome - LO freezes. (But if I copy it in Midori - everything is OK, maybe that's because Midori is not so powerful). Also opera dev is eaul to chrome, they are the same under the hood
Comment 6 Björn Michaelsen 2015-10-13 10:23:40 UTC
Update version as per comment 2.
Comment 7 Commit Notification 2016-06-03 09:18:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3e50a7bf0e3437a22b6440d0f36c242e40c451ae&h=libreoffice-5-2

Resolves: tdf#93971 freeze on load of specific html doc

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2016-06-03 09:18:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8db81b2fb3bde736deb42d23f3ecfd680212767

Resolves: tdf#93971 freeze on load of specific html doc

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Yan Pas 2016-06-03 09:49:46 UTC
I ll soon update to 5.1.x. Could you push fix there too? Thanks :)
Comment 10 Caolán McNamara 2016-06-04 20:25:28 UTC
5-1 backport pending approval as https://gerrit.libreoffice.org/#/c/25856/
Comment 11 Commit Notification 2016-06-06 08:33:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6317bcfd353a02d957811f2b6cb343cc3a3bbbec&h=libreoffice-5-1

Resolves: tdf#93971 freeze on load of specific html doc

It will be available in 5.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.