Resolves: tdf#93971 freeze on load of specific html doc

this is similar to

commit 6acd5c45c764d81aea1539e66adbfadb51df0aa3
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed Jan 21 15:25:03 2015 +0000

    Resolves: fdo#87601 specific html doc hangs on load

and is a consequence of the old changeover from unsigned shorts for old string
class to signed int for new string class

Change-Id: I47022c641cbc329d8802765927005d43211b0d88
(cherry picked from commit e8db81b2fb3bde736deb42d23f3ecfd680212767)
(cherry picked from commit 3e50a7bf0e3437a22b6440d0f36c242e40c451ae)